<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="fill_parent"
    android:background="#2B93CC"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="10dp"
    android:weightSum="10">

    <ImageView
        android:id="@+id/image_upload"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="#ffff"
        android:gravity="center"
        android:src="@drawable/ic_add_a_photo_black_34dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#ffff"
        android:gravity="center"
        android:padding="12dp"
        android:text="@string/action_camera_chooser"
        android:textColor="#8c8c8c" />

    <EditText
        android:id="@+id/title_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:hint="@string/upload_title"
        android:maxLength="50"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#8c8c8c" />

    <EditText
        android:id="@+id/description_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:hint="@string/upload_description"
        android:maxLength="50"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#8c8c8c" />

    <EditText
        android:id="@+id/tags_upload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:hint="@string/upload_tags"
        android:maxLength="50"
        android:padding="10dp"
        android:textColor="#000"
        android:textColorHint="#8c8c8c" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_weight="2">

        <Button
            android:id="@+id/upload_image_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="20dp"
            android:text="@string/upload_photo_button"
            android:textColor="#000" />
    </RelativeLayout>
</LinearLayout>